# JadaF

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  test.ipynb
.github/workflows/: tests.yml
jadaf/: __init__.py
jadaf/core/: __init__.py  jdf.py  sql_parser.py
jadaf/io/: __init__.py  readers.py
jadaf/plots/: __init__.py  plots.py
jadaf/transform/: __init__.py  auto_features.py  scalers.py  transforms.py
jadaf/ts/: time_series.py
jadaf/utils/: helpers.py
tests/: conftest.py  test_dataframe.py  test_excel_reader.py  test_readers.py  test_ts.py  ts_test.py
